src/objects/SubscriptionIncentiveAssociation__c.object
<CustomObject>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfilled_Date__c</fullName>
        <label>Fulfilled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incentive_Description__c</fullName>
        <formula>Incentive__r.Incentive_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive_Returned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incentive Returned?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incentive</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select only valid incentives.</errorMessage>
            <filterItems>
                <field>Incentive__c.Validity_Status__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Incentive__c</referenceTo>
        <relationshipLabel>Subscription Incentives</relationshipLabel>
        <relationshipName>SubscriptionIncentiveAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MGM Scheme</fullName>
                </value>
                <value>
                    <fullName>Staff Offer</fullName>
                </value>
                <value>
                    <fullName>Renewal Incentive</fullName>
                </value>
                <value>
                    <fullName>Acquisition Incentive</fullName>
                </value>
                <value>
                    <fullName>Goodwill</fullName>
                </value>
                <value>
                    <fullName>TMG Error</fullName>
                </value>
                <value>
                    <fullName>Winback Incentive</fullName>
                </value>
                <value>
                    <fullName>Renewal for TL1</fullName>
                </value>
                <value>
                    <fullName>Renewal for TL2</fullName>
                </value>
                <value>
                    <fullName>Renewal for T2</fullName>
                </value>
                <value>
                    <fullName>Renewal for T2 Catch Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriber Incentives</relationshipLabel>
        <relationshipName>Subscription_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipName>SubscriptionIncentiveAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Z subscription.</description>
        <inlineHelpText>Lookup to Z subscription.</inlineHelpText>
        <label>Zuora Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Subscription Incentives</relationshipLabel>
        <relationshipName>Subscription_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Subscription Incentive</label>
    <nameField>
        <displayFormat>SIA-{0000000000}</displayFormat>
        <label>SubscriptionIncentiveAssociation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Incentives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>